apps/argo-events/overlays/ops/virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argo-events
  namespace: argo-events
spec:
  gateways:
    - istio-system/istio-gateway
  hosts:
    - events.analect.com
  http:
    - match:
    - uri:
        prefix: /
    - route:
      - destination:
          host: github-eventsource-svc
          port:
            number: 12000
